# Chatbot-coffee

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_database.py  sysnc_milvus.py
data/: all_products.json  coffee_data.csv  the_coffee_house_all_urls.json
notebooks/: generate_response.ipynb  prepare_data.ipynb  shit.ipynb  test.ipynb
src/: main.py
src/agent/: graph.py  state.py  tools.py  utils.py
src/api/: main.py  models.py
src/app/: main.py  test.py
src/config/: settings.py
src/database/: connection.py  ingestion.py  menu_items.py  order_items.py  orders.py
src/embedding_model/: _init__.py  core.py
src/llm/: generate.py  system_prompt.py  tools.py
src/retrieval/: milvus_search.py  query_processor.py
src/utils/: helpers.py  query_utils.py  settings.py
the_coffee_house/: scrapy.cfg
the_coffee_house/the_coffee_house/: items.py  middlewares.py  pipelines.py  settings.py
the_coffee_house/the_coffee_house/spiders/: thecoffeehouse.py
