[project]
name = "chatbot-coffee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.20",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain-google-genai>=2.0.10",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pymilvus>=2.6.0",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.1",
    "transformers>=4.55.2",
    "uvicorn>=0.35.0",
]
